email api integration

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 CONNECT_DB=mongodb+srv://vaneimendes:ostenmoove@cluster0.qx4p4jp.mongodb.net/versecert-api
-RMQ_URL="amqp://localhost:5672"
+RMQ_URL=amqp://guest:guest@127.0.0.1:5672/
+SENDER_EMAIL=mario.santos@ostenmoove.com.br
