--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-CONNECT_DB=mongodb+srv://vaneimendes:ostenmoove@cluster0.qx4p4jp.mongodb.net/versecert-api
-RMQ_URL=amqp://guest:guest@127.0.0.1:5672/
-SENDER_EMAIL=mario.santos@ostenmoove.com.br
+CONNECT_DB=
