--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "versecert-api",
+  "name": "project_finish_samuel_backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
